[tool.poetry]
name = "peritum"
version = "0.1.0"
description = ""
authors = ["AXOME <axomedev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.2.4"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
cloudinary = "^1.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
